[package]
name = "mb2-aitexmrobot-ts24"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
rtt-target = "0.4"
panic-rtt-target = "0.1.3"

display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"

[dependencies.ili9341]
git = "https://github.com/pdx-cs-rust-embedded/ili9341-rs"
branch = "v0.6.0-bart"

[dependencies.microbit-v2]
git = "https://github.com/BartMassey-upstream/microbit"
branch = "v0.13.1-pre"

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[features]
default = ["circle", "text"]
circle = []
text = []
